Update tests to use Mocha instead of Expresso.
They now work on Windows, and pass (after slight fixes for the bucket thing).

--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/LearnBoost/knox.git"
+  },
+  "devDependencies": {
+    "mocha": "*"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
